--- a/IdleProductivityTycoon/IdleProductivityTycoon.Application/IdleProductivityTycoon.Application.csproj
+++ b/IdleProductivityTycoon/IdleProductivityTycoon.Application/IdleProductivityTycoon.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IdleProductivityTycoon.Domain\IdleProductivityTycoon.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
